--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,12 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.port=8000
+
 logging.file.name=D:/Spring/infoER-%d{yyyy-MM-dd }.%i.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{36} - %msg %n
 logging.level.root= ERROR
 
+
+#Server configuration
+server.servlet.context-path=/tpFoyer17
+server.port=8083
