--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ logging.level.root= ERROR
 
 
 #Server configuration
-server.servlet.context-path=/tpFoyer17
+server.servlet.context-path=/tpFoyer17/
 server.port=8083
