--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/sprinhg4sim5a?createDatabaseIfNotExist=trueJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/sprinhg4sim5arev?createDatabaseIfNotExist=trueJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###s
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 logging.file.name=D:/Spring/infoER-%d{yyyy-MM-dd }.%i.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %-5level- %logger{36} - %msg %n
-logging.level.root= ERROR
+logging.level.root= info
 
 
 #Server configuration
