--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/sprinhg4sim5arev?createDatabaseIfNotExist=trueJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/sprinng?createDatabaseIfNotExist=trueJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###s
